--- a/css/master.css
+++ b/css/master.css
@@ -62,3 +62,9 @@
     margin: 0 auto;
     text-align: left;
   }
+ .avatar {
+   vertical-align: left;
+   width: 15rem;
+   height:15rem;
+   border-radius: 50%;
+ }
